netpol-a/service-LB.yaml
apiVersion: v1
kind: Service
metadata:
  labels: &httpdtest_labels
    app.kubernetes.io/instance: httpdtest
    app.kubernetes.io/part-of: netpol-a
  name: httpdtest
  namespace: netpol-a
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  selector: *httpdtest_labels
  sessionAffinity: None
  type: LoadBalancer
