netpol-a/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: isolate-namespace
  namespace: netpol-a
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: monitoring
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/part-of: netpol-a
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/part-of: netpol-b
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
            - 10.128.0.0/14
        - podSelector: {}
  policyTypes:
    - Ingress
